# py4e

./: pyproject.toml  regex_sum_1346456.txt
ex_02/: ex_02_03.py  ex_02_04.py
ex_03/: ex_03_01.py  ex_03_02.py  ex_03_03.py
ex_04/: ex_04_01.py  ex_04_05.py  ex_04_06.py  ex_04_07.py
ex_05/: ex_05_01.py  ex_05_02.py
ex_06/: ex_06_01.py  ex_06_02.py  ex_06_03.py  ex_06_04.py  ex_06_05.py
ex_07/: ex_07_01.py  ex_07_02.py
ex_08/: ex_08_01.py  ex_08_04.py  ex_08_05.py  ex_08_06.py
ex_09/: ex_09_01.py  ex_09_02.py  ex_09_03.py  ex_09_04.py  ex_09_05.py
ex_10/: ex_10_01.py  ex_10_02.py  ex_10_03.py
ex_11/: ex_11.py  ex_11_01.py  ex_11_02.py
ex_12/: autograder2.py  autograder3.py  ex_12_01.py  ex_12_02.py  ex_12_03.py  ex_12_04.py  socket1.py
unknown/: ex_08_01.py
