[tool.poetry]
name = "py4e-1"
version = "0.1.0"
description = ""
authors = ["nreynolds <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
soupsieve = "^2.2.1"
"backports.functools-lru-cache" = "^1.6.4"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
